integrations/nextcloud/snappymail/app/themes/Nextcloud25/styles.css
/* ... */
#rl-app .b-footer.btn-toolbar.hide-mobile,
#rl-app .b-footer.btn-toolbar .btn-group.hide-on-panel-disabled {
    display: flex;
    flex-direction: column;
    align-content: stretch;
    justify-content: flex-start;
    height: unset;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    bottom: 0;
}

#rl-app .b-footer.btn-toolbar .btn-group {
    padding: 3px;
}

/*
 * buttons
 */

 #rl-app .btn {
    min-height: 36px;
    height: 36px;
    box-sizing: border-box !important;
    padding: 8px 14px;
    line-height: 20px;
    color: var(--color-main-text);
    background-color: var(--color-background-dark);
    border: 1px solid var(--color-border-dark) !important;
    border-radius: var(--border-radius-pill);
    font-size: var(--default-font-size);
}

#rl-app .btn.btn-thin {
    padding-right: 9px;
    padding-left: 9px;
}

#rl-app .btn.btn-transparent {
    border: unset !important;
}

#rl-app .btn.disabled, .btn[disabled],
#rl-app .btn.disabled:hover, .btn[disabled]:hover,
#rl-app .btn.disabled:focus, .btn[disabled]:focus,
#rl-app .btn.disabled:active, .btn[disabled]:active {
    outline: none;
    opacity: .5;
    filter: saturate(0.7);
}

#rl-app .btn:not(.disabled, [disabled]):hover,
#rl-app .btn:not(.disabled, [disabled]):focus {
    border-color: var(--color-primary-element) !important;
    outline: none;
    opacity: unset;
}

#rl-app .btn:not(.disabled, [disabled]):active {
    outline: none;
    opacity: unset;
    background-color: var(--color-main-background);
    color: var(--color-text-light);
}

#rl-app .btn, .btn.active, .btn:active, .btn.disabled, .btn[disabled] {
    text-shadow: none;
    box-shadow: none;
}

#rl-app .btn.buttonCompose {
    font-weight: bold;
    max-width: 100%;
    width: 100%;
}

#rl-app .btn.btn-success {
    color: var(--color-primary-element-text);
    background-color: var(--color-primary-element);
    border-color: var(--color-primary-element) !important;
}

#rl-app .btn.btn-success:hover,
#rl-app .btn.btn-success:focus {
    background-color: var(--color-primary-element-hover) !important;
    border-color: var(--color-primary-element-hover) !important;
}

#rl-app .btn.buttonCompose:active {
    color: var(--color-primary-text-dark);
}

#rl-app .btn.buttonCompose,
#rl-app .b-folders .btn.buttonContacts,
#rl-app .b-footer.btn-toolbar .btn-group .btn {
    box-sizing: border-box;
    padding: 4px 14px;
    line-height: 36px;
    height: 44px;
    min-width: -moz-fit-content;
    min-width: -webkit-fill-available;
    min-width: fit-content;

    font-size: var(--default-font-size);
    border-radius: var(--border-radius-pill);
}

#rl-app .b-footer.btn-toolbar .btn-group .btn {
    background: transparent;
    text-align: left;
    font-size: 22px;
    margin: 3px;
    border: unset !important;
}

#rl-app .b-footer.btn-toolbar .btn-group.hide-on-panel-disabled .btn {
    width: -webkit-fill-available;
    width: -moz-available;
    width: fill-available;
}

#rl-app .b-footer.btn-toolbar .btn-group .btn.fontastic {
    background-color: var(--color-main-background);
}

#rl-app .b-footer.btn-toolbar .btn-group .btn:after {
    font-family: var(--font-face);
    font-size: var(--default-font-size);
    position: absolute;
    margin-left: 15px;
}

#rl-app .b-footer.btn-toolbar .btn-group .btn.fontastic:after {
    content: 'SnappyMail-Settings';
}

#rl-app .b-footer.btn-toolbar .btn-group .btn.icon-folder-add:after {
    content: 'Create new folder';
}

#rl-app .icon-folder-add::before,
#rl-app .icon-resize-in::before {
    line-height: unset;
}

#rl-app .b-footer.btn-toolbar .btn-group .btn:hover,
#rl-app .b-footer.btn-toolbar .btn-group .btn.fontastic:hover {
    background-color: var(--color-background-hover);
}

#rl-app .b-footer.btn-toolbar .btn-group .btn:active,
#rl-app .b-footer.btn-toolbar .btn-group .btn.fontastic:active {
    background-color: var(--color-primary-element-light);
}

#rl-app .b-footer.btn-toolbar .btn-group .btn:focus,
#rl-app .b-footer.btn-toolbar .btn-group .btn.fontastic:focus {
    outline: none;
}

#rl-app #V-MailMessageList .btn-toolbar {
    text-align: center;
}

/*
 * inputs
 */

#rl-app input {
    padding: 0 12px;
    font-size: var(--default-font-size);
    color: var(--color-main-text);
    background-color: unset;
    height: 36px;
    outline: none;
    border: 2px solid var(--color-border-dark);
    border-radius: var(--border-radius-large);
}

#rl-app input:hover,
#rl-app input:active,
#rl-app input:focus {
    border-color: var(--color-primary-element);
}

#rl-app input[type="search"]::-webkit-search-decoration,
#rl-app input[type="search"]::-webkit-search-cancel-button,
#rl-app input[type="search"]::-webkit-search-results-button,
#rl-app input[type="search"]::-webkit-search-results-decoration {
    -webkit-appearance: none;
}

#rl-app input[type=number] { 
    -moz-appearance: textfield;
    -webkit-appearance: textfield; 
    appearance: textfield;
    margin: 0; 
}

/*
 * select
 */

#rl-app .emailaddresses,
#rl-app .select, #rl-app select {
    padding: 8px 12px;
    font-size: var(--default-font-size);
    color: var(--color-main-text);
    background-color: unset;
    height: 44px;
    outline: none;
    border: 2px solid var(--color-border-dark);
    border-radius: var(--border-radius-large);
    line-height: 24px;
}

#rl-app .emailaddresses:hover,
#rl-app .emailaddresses:active,
#rl-app .emailaddresses:focus,
#rl-app .select:hover, #rl-app select:hover,
#rl-app .select:active, #rl-app select:active,
#rl-app .select:focus, #rl-app select:focus {
    border-color: var(--color-primary-element);
}

select option {
    background-color: var(--color-background-dark);
    color: var(--color-main-text);
}
/* ... */

